tests/samples/negative/types/strraw_pointer_pattern_alias_return_local.ax
module strraw_pointer_pattern_alias_return_local;

unsafe fn bad() -> str {
    let bytes: [2]u8 = b"ok";
    let [data] = [bytes[:].ptr];
    return strraw(data, bytes[:].len);
}

fn main() -> i32 {
    return 0;
}
